[package]
name = "UnfairFatalBug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
chrono = { version = "0.4.31", features = ["serde"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
